--- a/requirements.txt
+++ b/requirements.txt
@@ -1,62 +1,62 @@
-adjusttext>=0.7.3 ; python_version >= "3.10" and python_version < "3.13"
-asciitree>=0.3.3 ; python_version >= "3.10" and python_version < "3.13"
-blinker>=1.9.0 ; python_version >= "3.10" and python_version < "3.13"
-blosc2>=2.7.1 ; python_version >= "3.10" and python_version < "3.13"
-cairocffi>=1.7.1 ; python_version >= "3.10" and python_version < "3.13"
-certifi>=2025.1.31 ; python_version >= "3.10" and python_version < "3.13"
-cffi>=1.17.1 ; python_version >= "3.10" and python_version < "3.13"
-charset-normalizer>=3.4.1 ; python_version >= "3.10" and python_version < "3.13"
-click-option-group>=0.5.6 ; python_version >= "3.10" and python_version < "3.13"
-click>=8.1.8 ; python_version >= "3.10" and python_version < "3.13"
-colorama>=0.4.6 ; python_version >= "3.10" and python_version < "3.13" and (platform_system >= "Windows" or sys_platform >= "win32")
-contourpy>=1.3.1 ; python_version >= "3.10" and python_version < "3.13"
-cooler>=0.10.3 ; python_version >= "3.10" and python_version < "3.13"
-cycler>=0.12.1 ; python_version >= "3.10" and python_version < "3.13"
-cython>=3.0.12 ; python_version >= "3.10" and python_version < "3.13"
-cytoolz>=1.0.1 ; python_version >= "3.10" and python_version < "3.13"
-dill>=0.3.9 ; python_version >= "3.10" and python_version < "3.13"
-filetype>=1.2.0 ; python_version >= "3.10" and python_version < "3.13"
-flask>=2.3.3 ; python_version >= "3.10" and python_version < "3.13"
-fonttools>=4.56.0 ; python_version >= "3.10" and python_version < "3.13"
-h5py>=3.13.0 ; python_version >= "3.10" and python_version < "3.13"
-hicmatrix>=17.2 ; python_version >= "3.10" and python_version < "3.13"
-idna>=3.10 ; python_version >= "3.10" and python_version < "3.13"
-importlib-metadata>=8.6.1 ; python_version >= "3.10" and python_version < "3.13"
-intervaltree>=3.1.0 ; python_version >= "3.10" and python_version < "3.13"
-itsdangerous>=2.2.0 ; python_version >= "3.10" and python_version < "3.13"
-jinja2>=3.1.6 ; python_version >= "3.10" and python_version < "3.13"
-kiwisolver>=1.4.8 ; python_version >= "3.10" and python_version < "3.13"
-loguru>=0.6.0 ; python_version >= "3.10" and python_version < "3.13"
-markupsafe>=3.0.2 ; python_version >= "3.10" and python_version < "3.13"
-matplotlib>=3.10.1 ; python_version >= "3.10" and python_version < "3.13"
-msgpack>=1.1.0 ; python_version >= "3.10" and python_version < "3.13"
-multiprocess>=0.70.17 ; python_version >= "3.10" and python_version < "3.13"
-ndindex>=1.9.2 ; python_version >= "3.10" and python_version < "3.13"
-numexpr>=2.10.2 ; python_version >= "3.10" and python_version < "3.13"
-numpy>=1.26.4 ; python_version >= "3.10" and python_version < "3.13"
-packaging>=24.2 ; python_version >= "3.10" and python_version < "3.13"
-pandas>=1.5.3 ; python_version >= "3.10" and python_version < "3.13"
-pillow>=11.1.0 ; python_version >= "3.10" and python_version < "3.13"
-py-cpuinfo>=9.0.0 ; python_version >= "3.10" and python_version < "3.13"
-pybigwig>=0.3.24 ; python_version >= "3.10" and python_version < "3.13"
-pycparser>=2.22 ; python_version >= "3.10" and python_version < "3.13"
-pyfaidx>=0.8.1.3 ; python_version >= "3.10" and python_version < "3.13"
-pyparsing>=3.2.1 ; python_version >= "3.10" and python_version < "3.13"
-pysam>=0.21.0 ; python_version >= "3.10" and python_version < "3.13"
-python-dateutil>=2.9.0.post0 ; python_version >= "3.10" and python_version < "3.13"
-pytz>=2025.1 ; python_version >= "3.10" and python_version < "3.13"
-pyyaml>=6.0.2 ; python_version >= "3.10" and python_version < "3.13"
-requests>=2.32.3 ; python_version >= "3.10" and python_version < "3.13"
-scipy>=1.15.2 ; python_version >= "3.10" and python_version < "3.13"
-seaborn>=0.12.2 ; python_version >= "3.10" and python_version < "3.13"
-simplejson>=3.20.1 ; python_version >= "3.10" and python_version < "3.13"
-six>=1.17.0 ; python_version >= "3.10" and python_version < "3.13"
-sortedcontainers>=2.4.0 ; python_version >= "3.10" and python_version < "3.13"
-tables>=3.10.1 ; python_version >= "3.10" and python_version < "3.13"
-toolz>=1.0.0 ; python_version >= "3.10" and python_version < "3.13"
-typing-extensions>=4.12.2 ; python_version >= "3.10" and python_version < "3.13"
-urllib3>=2.3.0 ; python_version >= "3.10" and python_version < "3.13"
-werkzeug>=3.1.3 ; python_version >= "3.10" and python_version < "3.13"
-win32-setctime>=1.2.0 ; python_version >= "3.10" and python_version < "3.13" and sys_platform >= "win32"
-xmltodict>=0.13.0 ; python_version >= "3.10" and python_version < "3.13"
-zipp>=3.21.0 ; python_version >= "3.10" and python_version < "3.13"
+adjusttext>=0.7.3 ; python_version >= "3.10" and python_version < "3.14"
+asciitree>=0.3.3 ; python_version >= "3.10" and python_version < "3.14"
+blinker>=1.9.0 ; python_version >= "3.10" and python_version < "3.14"
+blosc2>=3.3.3 ; python_version >= "3.10" and python_version < "3.14"
+cairocffi>=1.7.1 ; python_version >= "3.10" and python_version < "3.14"
+certifi>=2025.4.26 ; python_version >= "3.10" and python_version < "3.14"
+cffi>=1.17.1 ; python_version >= "3.10" and python_version < "3.14"
+charset-normalizer>=3.4.2 ; python_version >= "3.10" and python_version < "3.14"
+click-option-group>=0.5.7 ; python_version >= "3.10" and python_version < "3.14"
+click>=8.2.1 ; python_version >= "3.10" and python_version < "3.14"
+colorama>=0.4.6 ; python_version >= "3.10" and python_version < "3.14" and (platform_system >= "Windows" or sys_platform >= "win32")
+contourpy>=1.3.2 ; python_version >= "3.10" and python_version < "3.14"
+cooler>=0.10.3 ; python_version >= "3.10" and python_version < "3.14"
+cycler>=0.12.1 ; python_version >= "3.10" and python_version < "3.14"
+cython>=3.1.1 ; python_version >= "3.10" and python_version < "3.14"
+cytoolz>=1.0.1 ; python_version >= "3.10" and python_version < "3.14"
+dill>=0.4.0 ; python_version >= "3.10" and python_version < "3.14"
+filetype>=1.2.0 ; python_version >= "3.10" and python_version < "3.14"
+flask>=2.3.3 ; python_version >= "3.10" and python_version < "3.14"
+fonttools>=4.58.0 ; python_version >= "3.10" and python_version < "3.14"
+h5py>=3.13.0 ; python_version >= "3.10" and python_version < "3.14"
+hicmatrix>=17.2 ; python_version >= "3.10" and python_version < "3.14"
+idna>=3.10 ; python_version >= "3.10" and python_version < "3.14"
+intervaltree>=3.1.0 ; python_version >= "3.10" and python_version < "3.14"
+itsdangerous>=2.2.0 ; python_version >= "3.10" and python_version < "3.14"
+jinja2>=3.1.6 ; python_version >= "3.10" and python_version < "3.14"
+kiwisolver>=1.4.8 ; python_version >= "3.10" and python_version < "3.14"
+loguru>=0.6.0 ; python_version >= "3.10" and python_version < "3.14"
+markupsafe>=3.0.2 ; python_version >= "3.10" and python_version < "3.14"
+matplotlib>=3.10.3 ; python_version >= "3.10" and python_version < "3.14"
+msgpack>=1.1.0 ; python_version >= "3.10" and python_version < "3.14"
+multiprocess>=0.70.18 ; python_version >= "3.10" and python_version < "3.14"
+ndindex>=1.10.0 ; python_version >= "3.10" and python_version < "3.14"
+numexpr>=2.10.2 ; python_version >= "3.10" and python_version < "3.14"
+numpy>=1.26.4 ; python_version >= "3.10" and python_version < "3.14"
+packaging>=25.0 ; python_version >= "3.10" and python_version < "3.14"
+pandas>=1.5.3 ; python_version >= "3.10" and python_version < "3.14"
+pillow>=11.2.1 ; python_version >= "3.10" and python_version < "3.14"
+platformdirs>=4.3.8 ; python_version >= "3.10" and python_version < "3.14"
+py-cpuinfo>=9.0.0 ; python_version >= "3.10" and python_version < "3.14"
+pybigwig>=0.3.24 ; python_version >= "3.10" and python_version < "3.14"
+pycparser>=2.22 ; python_version >= "3.10" and python_version < "3.14"
+pyfaidx>=0.8.1.4 ; python_version >= "3.10" and python_version < "3.14"
+pyparsing>=3.2.3 ; python_version >= "3.10" and python_version < "3.14"
+pysam>=0.21.0 ; python_version >= "3.10" and python_version < "3.14"
+python-dateutil>=2.9.0.post0 ; python_version >= "3.10" and python_version < "3.14"
+pytz>=2025.2 ; python_version >= "3.10" and python_version < "3.14"
+pyyaml>=6.0.2 ; python_version >= "3.10" and python_version < "3.14"
+requests>=2.32.3 ; python_version >= "3.10" and python_version < "3.14"
+scipy>=1.15.3 ; python_version >= "3.10" and python_version < "3.14"
+seaborn>=0.12.2 ; python_version >= "3.10" and python_version < "3.14"
+simplejson>=3.20.1 ; python_version >= "3.10" and python_version < "3.14"
+six>=1.17.0 ; python_version >= "3.10" and python_version < "3.14"
+sortedcontainers>=2.4.0 ; python_version >= "3.10" and python_version < "3.14"
+tables>=3.10.1 ; python_version >= "3.10"
+tables>=3.10.2 ; python_version >= "3.11" and python_version < "3.14"
+toolz>=1.0.0 ; python_version >= "3.10" and python_version < "3.14"
+typing-extensions>=4.13.2 ; python_version >= "3.10" and python_version < "3.14"
+urllib3>=2.4.0 ; python_version >= "3.10" and python_version < "3.14"
+werkzeug>=3.1.3 ; python_version >= "3.10" and python_version < "3.14"
+win32-setctime>=1.2.0 ; python_version >= "3.10" and python_version < "3.14" and sys_platform >= "win32"
+xmltodict>=0.13.0 ; python_version >= "3.10" and python_version < "3.14"
